--- a/apps/nginx/service.yaml
+++ b/apps/nginx/service.yaml
@@ -6,12 +6,10 @@ metadata:
   labels:
     app: nginx
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:
     app: nginx
   ports:
-  - protocol: TCP
-    port: 80
-    targetPort: 80
-    nodePort: 30080
-
+    - protocol: TCP
+      port: 80
+      targetPort: 80
