--- a/argocd-infra/traefik.yaml
+++ b/argocd-infra/traefik.yaml
@@ -20,7 +20,7 @@ spec:
           replicas: 1
 
         service:
-          type: LoadBalancer
+          type: ClusterIP
 
         ports:
           web:
