Add Kubernetes CRD provider configuration to Traefik for cross-namespace support

--- a/argocd-infra/traefik.yaml
+++ b/argocd-infra/traefik.yaml
@@ -30,6 +30,10 @@ spec:
             port: 443
             exposedPort: 443
 
+        providers:
+          kubernetesCRD:
+            allowCrossNamespace: true
+
         ingressRoute:
           dashboard:
             enabled: false
