Add custom HTML content for service1 and service2 in values.yaml, and update deployment.yaml to mount content as a ConfigMap for Nginx.

--- a/apps/service1/values.yaml
+++ b/apps/service1/values.yaml
@@ -3,3 +3,39 @@ replicaCount: 1
 namespace: service1
 
 nameOverride: service1
+
+customContent: |
+  <!DOCTYPE html>
+  <html>
+  <head>
+    <title>Service 1</title>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        margin: 0;
+        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+        color: white;
+      }
+      .container {
+        text-align: center;
+        padding: 40px;
+        background: rgba(255, 255, 255, 0.1);
+        border-radius: 20px;
+        backdrop-filter: blur(10px);
+      }
+      h1 { font-size: 3em; margin: 0; }
+      p { font-size: 1.5em; margin-top: 20px; }
+    </style>
+  </head>
+  <body>
+    <div class="container">
+      <h1>🚀 Service 1</h1>
+      <p>Hello from Service 1!</p>
+      <p>Running on Kubernetes with ArgoCD + Traefik</p>
+    </div>
+  </body>
+  </html>
