--- a/apps/service2/values.yaml
+++ b/apps/service2/values.yaml
@@ -3,3 +3,39 @@ replicaCount: 2
 namespace: service2
 
 nameOverride: service2
+
+customContent: |
+  <!DOCTYPE html>
+  <html>
+  <head>
+    <title>Service 2</title>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        margin: 0;
+        background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);
+        color: white;
+      }
+      .container {
+        text-align: center;
+        padding: 40px;
+        background: rgba(255, 255, 255, 0.1);
+        border-radius: 20px;
+        backdrop-filter: blur(10px);
+      }
+      h1 { font-size: 3em; margin: 0; }
+      p { font-size: 1.5em; margin-top: 20px; }
+    </style>
+  </head>
+  <body>
+    <div class="container">
+      <h1>⚡ Service 2</h1>
+      <p>Hello from Service 2!</p>
+      <p>Running on Kubernetes with ArgoCD + Traefik</p>
+    </div>
+  </body>
+  </html>
