Enhance README with architecture overview and key design decisions for GitOps setup. Add ingress configuration for service1 and service2 in values.yaml, and remove outdated Traefik route configurations. Update deploy-infra.sh to clarify ingress deployment notes.

--- a/apps/service1/values.yaml
+++ b/apps/service1/values.yaml
@@ -4,6 +4,12 @@ namespace: service1
 
 nameOverride: service1
 
+ingress:
+  enabled: true
+  namespace: traefik
+  match: Host(`service1.local`) || PathPrefix(`/service1`)
+  stripPrefix: /service1
+
 customContent: |
   <!DOCTYPE html>
   <html>
