--- a/argocd-infra/traefik.yaml
+++ b/argocd-infra/traefik.yaml
@@ -8,41 +8,17 @@ metadata:
 spec:
   project: default
 
-  source:
-    repoURL: https://traefik.github.io/charts
-    targetRevision: 31.1.1
-    chart: traefik
-    helm:
-      releaseName: traefik
-      values: |
-        deployment:
-          kind: Deployment
-          replicas: 1
-
-        service:
-          type: ClusterIP
-
-        ports:
-          web:
-            port: 80
-            exposedPort: 80
-          websecure:
-            port: 443
-            exposedPort: 443
-
-        providers:
-          kubernetesCRD:
-            allowCrossNamespace: true
-
-        ingressRoute:
-          dashboard:
-            enabled: false
-
-        logs:
-          general:
-            level: INFO
-          access:
-            enabled: true
+  sources:
+    - repoURL: https://traefik.github.io/charts
+      targetRevision: 31.1.1
+      chart: traefik
+      helm:
+        releaseName: traefik
+        valueFiles:
+          - $values/infra/traefik/values.yaml
+    - repoURL: https://github.com/nguyenminhtiend/argo-cd-k8s.git
+      targetRevision: main
+      ref: values
 
   destination:
     server: https://kubernetes.default.svc
